--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,105 @@
 :root {
-    --azul: #0071b7;
-    --blanco: #FFF;
-    --naranja: #ff4f1e;
+  --azul: #0071b7;
+  --blanco: #fff;
+  --naranja: #ff4f1e;
 }
 html {
-    font-size: 62.5%; /** 1REM = 10pX **/
-    box-sizing: border-box;
+  font-size: 62.5%; /** 1REM = 10pX **/
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-  
-body {
-    background-color: var(--azul);
-    font-family:  'Lato', sans-serif;
-    font-size: 1.6rem;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-h1, h2 {
-    color: var(--blanco);
-    text-align: center;
-    margin: 5rem 0;
-    padding: 1rem;
+body {
+  background-color: var(--azul);
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+}
+
+h1,
+h2 {
+  color: var(--blanco);
+  text-align: center;
+  margin: 5rem 0;
+  padding: 1rem;
 }
 h2 {
-    padding-top: 3rem;
-    border-top: 2px solid #00446e;
+  padding-top: 3rem;
+  border-top: 2px solid #00446e;
 }
 h2:first-of-type {
-    border-top: none;
+  border-top: none;
 }
 .caja-curso {
-    background-color: var(--naranja);
-    text-align: center;
-    color: var(--blanco);
-    padding: 5rem;
-
+  background-color: var(--naranja);
+  text-align: center;
+  color: var(--blanco);
+  padding: 5rem;
 }
 .caja-curso h1 {
-    margin: 0;
+  margin: 0;
 }
 .caja-curso p {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 .caja-curso a {
-    font-size: 2.4rem;
-    padding: 2rem;
-    display: inline-block;
-    text-decoration: none;
-    color: var(--blanco);
-    padding: 0;
+  font-size: 2.4rem;
+  padding: 2rem;
+  display: inline-block;
+  text-decoration: none;
+  color: var(--blanco);
+  padding: 0;
 }
 .contenedor {
-    max-width: 120rem;
-    margin: 0 auto;
+  max-width: 120rem;
+  margin: 0 auto;
 }
 .box {
-    background-color: var(--naranja);
-    color: var(--blanco);
-    padding: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4rem;
-    border: 1rem solid #bb2b03;
+  background-color: var(--naranja);
+  color: var(--blanco);
+  padding: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+  border: 1rem solid #bb2b03;
 }
 
-
 p {
-    color: var(--blanco);
+  color: var(--blanco);
 }
 
 .columna {
-    background-color: #FFF;
-    height: 20rem;
-    font-size: 4rem;
-    padding-top: 8rem;
-    text-align: center;
-    margin-bottom: 2rem;
+  background-color: #fff;
+  height: 20rem;
+  font-size: 4rem;
+  padding-top: 8rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+/* Primeros Pasos con Media Queries */
+.oferta {
+  background-color: #00446e;
+  padding: 2rem;
+  text-align: center;
+  max-width: 80rem;
+  margin: 0 auto;
+}
+.precio {
+  font-size: 6rem;
+  margin: 0;
+}
+
+/* Media  Queries */
+@media (max-width: 600px) {
+  .oferta {
+    max-width: 30rem;
+  }
+  .precio {
+    font-size: 3rem;
+  }
 }
