Ejemplo de contenedor responsive

--- a/css/06.css
+++ b/css/06.css
@@ -6,16 +6,21 @@
 
 /* Telfono movil */
 @media (min-width: 550px) {
+
 }
 /* Portrait */
 @media (min-width: 768px) {
+
 }
 /* landscape */
 @media (min-width: 1024px) {
+
 }
 /* laptop */
 @media (min-width: 1200px) {
+
 }
-/* Monitor */
+/* Monitor o tv*/
 @media (min-width: 1600px) {
+
 }
